--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@discordjs/voice": "^0.8.0",
     "body-parser": "^1.19.1",
     "canvas": "^2.9.0",
     "chalk": "^5.0.0",
@@ -14,9 +15,9 @@
     "nodemon": "^2.0.15",
     "qrcode": "^1.5.0",
     "quick.db": "^7.1.3",
+    "quickonline": "^1.1.4",
     "speakeasy": "^2.0.0",
-    "util": "^0.12.4",
-    "quickonline": "^1.1.4"
+    "util": "^0.12.4"
   },
   "name": "poki",
   "version": "1.0.0",
