--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "quick.db": "^7.1.3",
     "quickonline": "^1.1.4",
     "speakeasy": "^2.0.0",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "topgg-autoposter": "^2.0.1"
   },
   "name": "poki",
   "version": "1.0.0",
